fix(): Increase dark mode border contrast.

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -33,31 +33,31 @@
 
 :root.theme-mode-dark {
   color-scheme: dark;
-  --background: 240 10% 0%;
+  --background: 240 0% 8%;
   --foreground: 0 0% 98%;
 
-  --card: 240 10% 6.9%;
+  --card: 240 0% 2%;
   --card-foreground: 0 0% 98%;
 
-  --popover: 240 10% 6.9%;
+  --popover: 240 0% 2%;
   --popover-foreground: 0 0% 98%;
 
   --primary: 0 0% 98%;
-  --primary-foreground: 240 5.9% 10%;
+  --primary-foreground: 240 0% 10%;
 
-  --secondary: 240 3.7% 15.9%;
+  --secondary: 240 0% 15.9%;
   --secondary-foreground: 0 0% 98%;
 
-  --muted: 240 3.7% 15.9%;
-  --muted-foreground: 240 5% 64.9%;
+  --muted: 240 0% 15.9%;
+  --muted-foreground: 240 0% 64.9%;
 
-  --accent: 240 3.7% 15.9%;
+  --accent: 240 0% 15.9%;
   --accent-foreground: 0 0% 98%;
 
   --destructive: 0, 84%, 60%;
-  --destructive-foreground: 240 10% 3.9%;
+  --destructive-foreground: 240 0% 3.9%;
 
-  --border: 240 3.7% 26.9%;
-  --input: 240 3.7% 28.9%;
-  --ring: 240 4.9% 83.9%;
+  --border: 240 0% 22.0%;
+  --input: 240 0% 22.0%;
+  --ring: 240 0% 83.9%;
 }
